--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-vue": "^10.0.0",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2",
+    "typescript-eslint": "^8.29.0",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
   }
