--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
+    "@types/node": "^22.14.0",
     "tailwindcss": "^4.1.1",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.23.0",
+    "eslint-import-resolver-typescript": "^4.3.1",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
