--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.4.0",
     "@tailwindcss/vite": "^4.1.1",
     "@types/node": "^22.14.0",
     "tailwindcss": "^4.1.1",
