--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/auth0-vue": "^2.4.0",
     "@tailwindcss/vite": "^4.1.1",
     "@types/node": "^22.14.0",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.1.1",
     "vue": "^3.5.13",
     "vue-router": "4"
