--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_API_SERVER_URL=http://localhost:5173
 VITE_AUTH0_DOMAIN=dev-quk7pvhgrjkr3oia.uk.auth0.com
 VITE_AUTH0_CLIENT_ID=rACivWnIp3hSn5sy5ZYOAT8qnVBFoS2I
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173/lemur-core/callback
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173/lemur-core/
