--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:pages": "pnpm build && git commit -m 'updating dist' && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
