--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "build:pages": "pnpm build && git commit -m 'updating dist' && git subtree push --prefix dist origin gh-pages"
+    "build:pages": "pnpm build && git add dist -f && git commit -m 'updating dist' && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.4.0",
